# bank

./: Cargo.toml  Makefile  README.md  TODO.md  transactions.csv
src/: lib.rs  main.rs
src/models/: account_balance.rs  balance_book.rs  ledger.rs  mod.rs  raw_tx.rs  tx.rs
src/models/tx/: deposit.rs  dispute.rs  mod.rs  withdrawal.rs
src/run/: computer.rs  config.rs  mod.rs  parser.rs  tx.rs  writer.rs
tests/: cli.rs  parser.rs  run.rs
tests/fixtures/: missing_amount.csv  missing_client.csv  missing_column.csv  missing_tx.csv  unknown_kind.csv
