[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bank"

[dependencies]
csv = "1.1"
env_logger = "0.9"
log = "0.4"
rust_decimal = "1.17"
rust_decimal_macros = "1.17"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
